updated css to prevent extra whitespace

--- a/src/app.css
+++ b/src/app.css
@@ -27,4 +27,5 @@
     bottom: 0%;
     min-width: 435px;
     height: 78vh;
+    max-height:582px;
   }
